--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 }
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  /* background-image: url(https://i.pinimg.com/originals/6d/46/f9/6d46f977733e6f9a9fa8f356e2b3e0fa.gif); */
-  background-image: url(../images/default_bg.jpg);
+  background-image: url(https://i.pinimg.com/originals/6d/46/f9/6d46f977733e6f9a9fa8f356e2b3e0fa.gif);
+  /* background-image: url(../images/default_bg.jpg); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
